website: Fix alignment for code blocks.

--- a/website/resources/css/main.less
+++ b/website/resources/css/main.less
@@ -676,7 +676,7 @@ section.doc {
   }
 
   pre > div {
-    position: absolute; right: -5px; top: 11px; z-index: 1; overflow: hidden;
+    position: absolute; right: -5px; top: -5px; z-index: 1; overflow: hidden;
     width: 75px; height: 75px; text-align: right;
   }
 
